landmark test are passing

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,8 +1,16 @@
 
 
- <form class="" action="index.html" method="post">
-    <label for=""></label>
-    <input type="text" name="" value="">
+ <form class="" action="/landmarks/new" method="post">
 
-    <input type="button" name="submit" value="submit">
+  <p>
+    <label for="">Landmark Name:</label>
+    <input type="text"  id="landmark_name" name="landmark[name]" value="">
+  </p>
+
+  <p>
+    <label for="">Landmark Year Completed:</label>
+    <input type="text" id="landmark_year_completed" name="landmark[year_completed]" value="">
+  </p>
+
+    <input type="submit" name="Create New Landmark" value="Create New Landmark">
  </form>
